G2Parser.py
# Generated from G2.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class G2Parser ( Parser ):

    grammarFileName = "G2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUM", "WS" ]

    RULE_prog = 0
    RULE_e = 1
    RULE_t = 2
    RULE_f = 3

    ruleNames =  [ "prog", "e", "t", "f" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    NUM=7
    WS=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def e(self):
            return self.getTypedRuleContext(G2Parser.EContext,0)


        def EOF(self):
            return self.getToken(G2Parser.EOF, 0)

        def getRuleIndex(self):
            return G2Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = G2Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self.e()
            self.state = 9
            self.match(G2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return G2Parser.RULE_e

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class G2SumaContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G2Parser.EContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def t(self):
            return self.getTypedRuleContext(G2Parser.TContext,0)

        def e(self):
            return self.getTypedRuleContext(G2Parser.EContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterG2Suma" ):
                listener.enterG2Suma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitG2Suma" ):
                listener.exitG2Suma(self)


    class G2TermEContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G2Parser.EContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def t(self):
            return self.getTypedRuleContext(G2Parser.TContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterG2TermE" ):
                listener.enterG2TermE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitG2TermE" ):
                listener.exitG2TermE(self)


    class G2RestaContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G2Parser.EContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def t(self):
            return self.getTypedRuleContext(G2Parser.TContext,0)

        def e(self):
            return self.getTypedRuleContext(G2Parser.EContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterG2Resta" ):
                listener.enterG2Resta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitG2Resta" ):
                listener.exitG2Resta(self)



    def e(self):

        localctx = G2Parser.EContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_e)
        try:
            self.state = 20
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = G2Parser.G2SumaContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 11
                self.t()
                self.state = 12
                self.match(G2Parser.T__0)
                self.state = 13
                self.e()
                pass

            elif la_ == 2:
                localctx = G2Parser.G2RestaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 15
                self.t()
                self.state = 16
                self.match(G2Parser.T__1)
                self.state = 17
                self.e()
                pass

            elif la_ == 3:
                localctx = G2Parser.G2TermEContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 19
                self.t()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return G2Parser.RULE_t

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class G2TermTContext(TContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G2Parser.TContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def f(self):
            return self.getTypedRuleContext(G2Parser.FContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterG2TermT" ):
                listener.enterG2TermT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitG2TermT" ):
                listener.exitG2TermT(self)


    class G2MultContext(TContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G2Parser.TContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def f(self):
            return self.getTypedRuleContext(G2Parser.FContext,0)

        def t(self):
            return self.getTypedRuleContext(G2Parser.TContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterG2Mult" ):
                listener.enterG2Mult(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitG2Mult" ):
                listener.exitG2Mult(self)


    class G2DivContext(TContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G2Parser.TContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def f(self):
            return self.getTypedRuleContext(G2Parser.FContext,0)

        def t(self):
            return self.getTypedRuleContext(G2Parser.TContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterG2Div" ):
                listener.enterG2Div(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitG2Div" ):
                listener.exitG2Div(self)



    def t(self):

        localctx = G2Parser.TContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_t)
        try:
            self.state = 31
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = G2Parser.G2MultContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.f()
                self.state = 23
                self.match(G2Parser.T__2)
                self.state = 24
                self.t()
                pass

            elif la_ == 2:
                localctx = G2Parser.G2DivContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.f()
                self.state = 27
                self.match(G2Parser.T__3)
                self.state = 28
                self.t()
                pass

            elif la_ == 3:
                localctx = G2Parser.G2TermTContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 30
                self.f()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return G2Parser.RULE_f

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class G2NumContext(FContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G2Parser.FContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(G2Parser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterG2Num" ):
                listener.enterG2Num(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitG2Num" ):
                listener.exitG2Num(self)


    class G2ParenContext(FContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G2Parser.FContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self):
            return self.getTypedRuleContext(G2Parser.EContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterG2Paren" ):
                listener.enterG2Paren(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitG2Paren" ):
                listener.exitG2Paren(self)



    def f(self):

        localctx = G2Parser.FContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_f)
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                localctx = G2Parser.G2ParenContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(G2Parser.T__4)
                self.state = 34
                self.e()
                self.state = 35
                self.match(G2Parser.T__5)
                pass
            elif token in [7]:
                localctx = G2Parser.G2NumContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.match(G2Parser.NUM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





